# SlicerSegmentationWizard

./: CMakeLists.txt  README.md
ModelSegmentation/: CMakeLists.txt  ModelSegmentation.py  README.md
ModelSegmentation/ModelSegmentationWizard/: Helper.py  ModelSegmentationStep.py  NormalizeSubtract.py  ROI.py  Registration.py  Review.py  Threshold.py  VolumeClipWithModel.py  VolumeSelect.py
ModelSegmentation/Testing/Data/: Test_Model.vtk
SegmentationWizard/: CMakeLists.txt  README.md  SegmentationWizard.py
SegmentationWizard/SegmentationWizard_Lib/: Helper.py  NormalizeSubtract.py  ROI.py  Registration.py  Review.py  SegmentationWizardStep.py  Threshold.py  VolumeClipWithModel.py  VolumeSelect.py  __init__.py
Testing/: CMakeLists.txt  ModelSegmentationSelfTest.py  SegmentationWizardSelfTest.py
